k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starttech-backend-api
spec:
  type: NodePort
  selector:
    app: starttech-backend-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
